--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@auth/core": "^0.19.0",
+    "@auth/prisma-adapter": "^1.0.12",
     "@hookform/resolvers": "^3.3.3",
-    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.7.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -46,10 +47,6 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
-    "@trpc/client": "^10.45.0",
-    "@trpc/next": "^10.45.0",
-    "@trpc/react-query": "^10.45.0",
-    "@trpc/server": "^10.45.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
@@ -57,7 +54,7 @@
     "embla-carousel-react": "8.0.0-rc17",
     "lucide-react": "^0.302.0",
     "next": "^14.0.4",
-    "next-auth": "^4.24.5",
+    "next-auth": "5.0.0-beta.4",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-day-picker": "^8.10.0",
