--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-markdown": "^9.0.1",
     "react-resizable-panels": "^1.0.5",
     "server-only": "^0.0.1",
     "sonner": "^1.3.1",
