--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
     "@uiw/react-md-editor": "^4.0.2",
+    "ai": "^2.2.30",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
@@ -57,6 +58,7 @@
     "next": "^14.0.4",
     "next-auth": "5.0.0-beta.4",
     "next-themes": "^0.2.1",
+    "openai": "^4.24.1",
     "react": "18.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "18.2.0",
