--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "cmdk": "^0.2.0",
     "date-fns": "^3.0.6",
     "embla-carousel-react": "8.0.0-rc17",
+    "geist": "^1.2.0",
     "lucide-react": "^0.302.0",
     "next": "^14.0.4",
     "next-auth": "5.0.0-beta.4",
