--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query-devtools": "^5.17.9",
+    "@tanstack/react-table": "^8.11.2",
     "@uiw/react-md-editor": "^4.0.2",
     "ai": "^2.2.30",
     "class-variance-authority": "^0.7.0",
@@ -77,6 +79,7 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.4",
+    "@tanstack/eslint-plugin-query": "^5.17.7",
     "@types/eslint": "^8.56.0",
     "@types/node": "^18.19.3",
     "@types/react": "^18.2.45",
